Bug 149110 Memory leak of 20 bytes from 1 block allocated in nsMsgKeySet::Create(char const*) r=dwitte sr=bienvenu